[package]
name = "juni"
version = "0.1.0"
edition = "2021"

[lib]
name = "juni"
path = "src/lib.rs"

[dependencies]
winit = { version = "0.30.12" }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
wgpu = { version = "27.0.1" }
pollster = { version = "0.4.0" }
glam = { version = "0.33" }
bytemuck = { version = "1", features = ["derive"] }
web-time = { version = "1.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
# Use the WebGL2 backend on the web. It is supported by every modern browser,
# whereas WebGPU is still gated/experimental in many of them — without this the
# build traps with "Could not get an adapter" on browsers lacking WebGPU.
wgpu = { version = "27.0.1", features = ["webgl"] }

# The `juni` binary (src/main.rs) just `include!`s examples/shapes.rs, so the
# same demo runs via `cargo run`, `cargo run --example shapes`, and Trunk on the
# web (`data-bin="juni"` — Trunk 0.21 can't target a cargo example directly).
